--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
   </div>
 
   <div class="" style="position:absolute; top: 0px; width:90vw;">
-    <img src="./img/harshit_logo.png" alt="" style="width:275px;margin-top:16%;margin-left:43%">
+    <img src="./img/harshit_logo.jpg" alt="" style="width:275px;margin-top:16%;margin-left:43%">
   </div>
 
 
   <script src="js/require.js" data-main="js/index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  
 </body>
 
 </html>
