--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 
 <body style="margin: 0; padding: 0; width: 100%; height: 100%">
 
-  <div class="" style="height:1000px; background:transparent">
+  <div class="" style="height:2000px; background:transparent">
     <div id="wrapper" class="home" style="position:fixed">
     </div>
   </div>
 
   <div class="" style="position:absolute; top: 0px; width:90vw;">
-    <img src="./img/harshit_logo.jpg" alt="" style="width:275px;margin-top:16%;margin-left:43%">
+    <img src="./img/harshit_logo.png" alt="" style="width:275px;margin-top:16%;margin-left:43%">
   </div>
 
 
-  <script src="js/require.js" data-main="js/index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  
+
+    <script src="js/require.js" data-main="js/index.js"></script>
 </body>
 
 </html>
