making some changes

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         <div class="content">
                              <p>Interested in working together? We should queue up a chat. I’ll buy the coffee.</p>
                              <img src="./assets/resume/harshit_logo.png" alt="" style="width:200px; height:150px;margin-left: 20%">
-                             <a class="btn btn-cta-secondary btn-follow" href="" target="_blank" style="margin-left:25%"><i class="fas fa-coffee"></i>Let's do this</a>
+                             <a class="btn btn-cta-secondary btn-follow" href="mailto:harshitpandey678@gmail.com?Subject=Hello%20Harshit" target="_blank" style="margin-left:25%"><i class="fas fa-coffee"></i>Let's do this</a>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
