updated new project

--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
                         <div class="content">
 
                             <div class="item featured text-center">
+                                <h3 class="title"><a href="https://file-explorer-232906.appspot.com" target="_blank">FileExplorer using vue.js and vuex</a></h3>
+                                <p class="summary">A File Explorer application using vue.js and vuex for store management which allows the user to create, delete a folder/file and every folder/file has icons according to the extension of the file.</p>
+                                <div class="featured-image has-ribbon">
+                                    <a href="https://file-explorer-232906.appspot.com" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/resume/file_explorer.gif" alt="FileExplorer" />
+                                    </a>
+                                    <div class="ribbon">
+                                        <div class="text" style="font-size:10px">NEW</div>
+                                    </div>
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p>
+                                      In this vue.js application a User can create, delete a folder/file ,can Search for files globally.
+                                    </p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                            <hr class="divider" />
+
+                            <div class="item featured text-center">
                                 <h3 class="title"><a href="https://github.com/harshittpandey/friendreq-system" target="_blank">Friend Request System using Node.js</a></h3>
                                 <p class="summary">A simple node.js application which let's you search for users and connect with them by sending Friend Request.</p>
                                 <div class="featured-image has-ribbon">
@@ -98,6 +118,7 @@
                                 <a class="btn btn-cta-secondary" href="https://medium.com/@harshitpandey678/friend-request-system-using-node-js-c9effadc8beb" target="_blank"><i class="fas fa-thumbs-up"></i> Like my project</a>
                             </div><!--//item-->
                             <hr class="divider" />
+
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/harshittpandey/testpackage-app" target="_blank">
@@ -256,6 +277,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Gurgaon, India</li>
+                                <li><i class="fas fa-mobile-alt"></i><span class="sr-only">Contact Number:</span><a href="tel:965-095-9057,91">+91 9650959057</a></li>
                                 <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="mailto:harshitpandey678@gmail.com?Subject=Hello%20Harshit">harshitpandey678@gmail.com</a></li>
                                 <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://harshittpandey.github.io/</a></li>
                             </ul>
