--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/harshit-pandey-84779114a/"><i class="fab fa-linkedin-in"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/harshittpandey"><i class="fab fa-github-alt"></i></a></li>
                     <li class="list-inline-item"><a href="https://medium.com/@harshitpandey678"><i class="fab fa-medium"></i></a></li>
+                    <li class="list-inline-item"><a href="https://stackoverflow.com/users/10070079/harshit-pandey"><i class="fab fa-stack-overflow"></i></a></li>                   
                 </ul>
             </div><!--//profile-->
             <a class="btn btn-cta-primary float-right" href="./assets/resume/harshitResume.pdf" target="_blank"><i class="fas fa-file"></i> Resume</a>
@@ -84,11 +85,11 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://file-explorer-232906.appspot.com" target="_blank">FileExplorer using vue.js and vuex</a></h3>
-                                <p class="summary">A File Explorer application using vue.js and vuex for store management which allows the user to create, delete a folder/file and every folder/file has icons according to the extension of the file.</p>
+                                <h3 class="title"><a href="https://harshittpandey.github.io/assets/resume/totalvyv.gif" target="_blank">Online Voting Application</a></h3>
+                                <p class="summary">Vue.js Application with internal-dashboards for different type of users (eletion-committee, nominee, voters) with a 3 step process to create election(upload voter list from excel sheet). </p>
                                 <div class="featured-image has-ribbon">
-                                    <a href="https://file-explorer-232906.appspot.com" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/resume/file_explorer.gif" alt="FileExplorer" />
+                                    <a href="https://harshittpandey.github.io/assets/resume/totalvyv.gif" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/resume/totalvyv.gif" alt="FileExplorer" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text" style="font-size:10px">NEW</div>
@@ -96,48 +97,76 @@
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>
-                                      In this vue.js application a User can create, delete a folder/file ,can Search for files globally.
-                                    </p>
+                                    <p> <b>Above Screen shows 3 dashboards: </b> </p>
+                                    <div style="margin-left: 2rem">    
+                                        <p>
+                                            <b>
+                                                    Super Admin:
+                                            </b> 
+                                            Has access to all elections, election committee, nominee, voters.
+                                        </p>
+                                        <p>
+                                            <b>
+                                                Election Committee:
+                                            </b> 
+                                            Create a new election, assign voters and nominee.
+                                        </p>
+                                        <p>
+                                            <b>
+                                                Nominee:
+                                            </b>
+                                            Can update profile details and Manifesto.
+                                        </p>
+                                    </div>
                                 </div><!--//desc-->
                             </div><!--//item-->
+                            <br>
                             <hr class="divider" />
 
-                            <div class="item featured text-center">
-                                <h3 class="title"><a href="https://github.com/harshittpandey/friendreq-system" target="_blank">Friend Request System using Node.js</a></h3>
-                                <p class="summary">A simple node.js application which let's you search for users and connect with them by sending Friend Request.</p>
+                            <div class="item featured text-center"> 
+                                <h3 class="title"><a href="https://harshittpandey.github.io/assets/resume/s2mReportTemplate.gif" target="_blank"></a>Business intelligence tool (Stones2Milestones) </h3>
+                                <p class="summary">FullStack Internal dashboard to generate Reports and analytics inside the company.</p>
                                 <div class="featured-image has-ribbon">
-                                    <a href="https://github.com/harshittpandey/friendreq-system" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/resume/projectFriendRequest.gif" alt="FriendRequest" />
+                                    <a href="https://harshittpandey.github.io/assets/resume/s2mReportTemplate.gif" target="_blank">
+                                    <img class="img-fluid project-image" src="assets/resume/s2mReportTemplate.gif" alt="FriendRequest" />
                                     </a>
                                     <div class="ribbon">
-                                        <div class="text" style="font-size:10px">Last Project</div>
+                                        <div class="text" style="font-size:10px">New</div>
                                     </div>
                                 </div>
 
                                 <div class="desc text-left">
                                     <p>
-                                      In this application a User can create a profile ,can Search for other Users and Connect with them by sending and accepting friend Request.
-                                      This was my first Node.js Project.
-                                      I have also written a Blog on this Project.
+                                        First Fullstack application at Stones2milestones. Learned from creating a Fullstack project (vue.js, node.js, mysql, RESTapi, Server-side rendering) to deploying it to Digital Ocean (pm2, nginx, ssh).
                                     </p>
                                     <p>
-                                      Please Read and give your Feedbacks : <span> <a href="https://medium.com/@harshitpandey678/friend-request-system-using-node-js-c9effadc8beb" style="letter-spacing:2px"> Friend Request System Blog </a> </span>
+                                        User can upload the CSV's and the system will do the calculations and generate a report. (Automating a lot of manual work)
                                     </p>
-                                </div><!--//desc-->
-                                <a class="btn btn-cta-secondary" href="https://medium.com/@harshitpandey678/friend-request-system-using-node-js-c9effadc8beb" target="_blank"><i class="fas fa-thumbs-up"></i> Like my project</a>
-                            </div><!--//item-->
+                                </div>
+                                <!-- <a class="btn btn-cta-secondary" href="https://medium.com/@harshitpandey678/friend-request-system-using-node-js-c9effadc8beb" target="_blank"><i class="fas fa-thumbs-up"></i> Like my project</a> -->
+                            </div> 
+                            <!--//item-->
                             <hr class="divider" />
 
-
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://github.com/harshittpandey/testpackage-app" target="_blank">
-                                <img class="img-fluid project-image" src="assets/resume/projectTest.png" style="height: 150px" alt="project name" />
+                                <a class="col-md-4 col-12" href="https://file-explorer-232906.appspot.com" target="_blank">
+                                <img class="img-fluid project-image" src="assets/resume/file_explorer.gif" style="height: 150px" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/harshittpandey/testpackage-app" target="_blank">Quiz Platform</a></h3>
-                                    <p class="mb-2">A Vue.js quiz application which gets questions from a JSON file and reading passages questions and other simple questions are designed in a responsive manner.</p>
-                                    <p><a class="more-link" href="https://github.com/harshittpandey/testpackage-app" target="_blank"><i class="fas fa-external-link-alt"></i>View Code.</a></p>
+                                    <h3 class="title"><a href="https://file-explorer-232906.appspot.com" target="_blank">FileExplorer using vue.js and vuex</a></h3>
+                                    <p class="mb-2">A File Explorer application using vue.js and vuex for store management which allows the user to create, delete a folder/file and every folder/file has icons according to the extension of the file.</p>
+                                    <!-- <p><a class="more-link" href="https://github.com/harshittpandey/testpackage-app" target="_blank"><i class="fas fa-external-link-alt"></i>View Code.</a></p> -->
+                                </div><!--//desc-->
+                            </div><!--//item-->
+
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="https://github.com/harshittpandey/friendreq-system" target="_blank">
+                                <img class="img-fluid project-image" src="assets/resume/projectFriendRequest.gif" style="height: 150px" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="https://github.com/harshittpandey/friendreq-system" target="_blank">Friend Request System using Node.js</a></h3>
+                                    <p class="mb-2">A simple node.js application which let's you search for users and connect with them by sending Friend Request.</p>
+                                    <p><a class="more-link" href="https://github.com/harshittpandey/friendreq-system" target="_blank"><i class="fas fa-external-link-alt"></i>View Code.</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
@@ -234,7 +263,13 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Frontend Engineer (Intern) - <span class="place"><a href="https://www.linkedin.com/company/stones2milestones/">Stones2Milestones</a></span> <span class="year">(Jan-2019 - Present)</span></h3>
+                                <h3 class="title">FullStack Engineer - <span class="place"><a href="https://www.linkedin.com/company/stones2milestones/">Stones2Milestones</a></span> <span class="year">(Jul-2019 - Present)</span></h3>
+                                    <p>
+                                        Started creating Fullstack Production Applications using node.js and vue.js . 
+                                    </p>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title">Frontend Engineer (Intern) - <span class="place"><a href="https://www.linkedin.com/company/stones2milestones/">Stones2Milestones</a></span> <span class="year">(Jan-2019 - Jul-2019)</span></h3>
                                 <p>
                                   In Stones2Milestones, My work is to create a responsive and UserInterface using Vue.js.
                                 </p>
