--- a/index.html
+++ b/index.html
@@ -464,6 +464,16 @@
                         <div class="content">
                           <div class="items">
                             <div class="item" style="border:1px solid lightgray; padding:10px; border-radius: 8px">
+                                <h3 class="title">
+                                  <a href="https://medium.com/front-end-weekly/deploy-fullstack-with-nginx-on-digital-ocean-ed1fbc92275f" target="blank">Deploy Fullstack with Nginx on Digital Ocean</a>
+                                </h3>
+                                <div class="">
+                                  <p>
+                                    A Quick guide to deploy a Fullstack application in Digital Ocean. Majorly focusing on Nginx.
+                                  </p>
+                                </div>
+                            </div>
+                            <div class="item" style="border:1px solid lightgray; padding:10px; border-radius: 8px">
                               <h3 class="title">
                                 <a href="https://medium.com/@harshitpandey678/friend-request-system-using-node-js-c9effadc8beb" target="blank">Friend Request System using node js .</a>
                               </h3>
