changed the name of a project

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <img class="img-fluid project-image" src="assets/resume/projectKwench.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/harshittpandey/Kwench-Assignment" target="_blank">Official site of Kwench</a></h3>
+                                    <h3 class="title"><a href="https://github.com/harshittpandey/Kwench-Assignment" target="_blank">Kwench Landing Page: Assignment</a></h3>
                                     <p class="mb-2">This is the sample design for the Official page of Kwench. I got this as an assignment and later I enjoyed creating the UI. It was an amazing experience .
                                       Check <a href="https://harshittpandey.bitbucket.io/">Website</a>
                                     </p>
