--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </q>
                             <hr>
                             <p>
-                              I currently am working as a Frontend Engineer(Intern) at Stones2Milestones, which is where my passion for designing and developing the User-Interface converge. You can always check some of my projects on <a href="https://github.com/harshittpandey">Github</a>. Outside of work I love to Sketch and Travel. I am also messing with some React.js projects . Currently I am also accepting freelance work, and I'd love to get coffee and get to know you, so don’t hesitate to get in touch.
+                              I am currently working as a FullStack Engineer at Stones2Milestones, which is where my passion for designing and developing the User-Interface converge. You can always check some of my projects on <a href="https://github.com/harshittpandey">Github</a>. Outside of work I love to Sketch and Travel. I am also messing with some React.js projects . Currently I am also accepting freelance work, and I'd love to get coffee and get to know you, so don’t hesitate to get in touch.
                             </p>
 
                         </div><!--//content-->
