--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container clearfix">
-            <img class="profile-image img-fluid float-left" src="assets/resume/harshit.JPG" style="width:190px; border-radius:50%" alt="Harshit Pandey" />
+            <!-- <img class="profile-image img-fluid float-left" src="assets/resume/harshit.JPG" style="width:190px; border-radius:50%" alt="Harshit Pandey" /> -->
             <div class="profile-content float-left">
                 <h1 class="name">Harshit Pandey</h1>
                 <h2 class="desc">Frontend Developer</h2>
@@ -290,7 +290,7 @@
                             <div class="item">
                                 <h3 class="title">FullStack Engineer - <span class="place"><a href="https://www.linkedin.com/company/stones2milestones/">Stones2Milestones</a></span> <span class="year">(Jul-2019 - Present)</span></h3>
                                     <p>
-                                        Started creating Fullstack Production Applications using node.js and vue.js . 
+                                        From started creating fullstack applications to actually deploying them to production, I got the chance to learn it all. Successfully deployed two applications(vue+ node+ REST) which automate heavy manual tasks and creates a bridge between 2 teams.
                                     </p>
                             </div><!--//item-->
                             <div class="item">
@@ -381,13 +381,33 @@
                                 </div><!--//item-->
 
                                 <div class="col-sm-4 item">
-                                    <img src="./assets/resume/skills/jQuery.png" alt="jQuerylogo" style="width:100px">
-                                    <h3 class="level-title" style="margin-left:1.5em">jQuery</h3>
+                                    <img src="./assets/resume/skills/vue.png" alt="VUElogo" style="width:100px">
+                                    <h3 class="level-title" style="margin-left:1.5em">Vue</h3>
                                 </div><!--//item-->
 
                                 <div class="col-sm-4 item">
-                                    <img src="./assets/resume/skills/vue.png" alt="VUElogo" style="width:100px">
-                                    <h3 class="level-title" style="margin-left:1.5em">Vue</h3>
+                                    <img src="./assets/resume/skills/skillVueMaterial.png" alt="vue material" style="width:100px; height: 70px; margin-top: 30px; padding-bottom:10px">
+                                    <h3 class="level-title" >Vue Material</h3>
+                                </div><!--//item-->
+
+                                <div class="col-sm-4 item">
+                                    <img src="./assets/resume/skills/vueX.png" alt="vuex" style="width:100px">
+                                    <h3 class="level-title" style="margin-left:1.5em">Vuex</h3>
+                                </div><!--//item-->
+
+                                <div class="col-sm-4 item">
+                                    <img src="./assets/resume/skills/boostrap.svg" alt="Bootstraplogo" style="width:80px; margin-top: 10px; padding-bottom: 10px;">
+                                    <h3 class="level-title" style="margin-left:1em">Bootstrap</h3>
+                                </div><!--//item-->
+
+                                <div class="col-sm-4 item">
+                                    <img src="./assets/resume/skills/skillUiux.png" alt="ui/ux" style="width:100px">
+                                    <h3 class="level-title" style="margin-left:1.5em">UI/ UX Handling</h3>
+                                </div><!--//item-->
+
+                                <div class="col-sm-4 item">
+                                    <img src="./assets/resume/skills/jQuery.png" alt="jQuerylogo" style="width:100px">
+                                    <h3 class="level-title" style="margin-left:1.5em">jQuery</h3>
                                 </div><!--//item-->
 
                                 <div class="col-sm-4 item">
@@ -396,13 +416,18 @@
                                 </div><!--//item-->
 
                                 <div class="col-sm-4 item">
-                                    <img src="./assets/resume/skills/boostrap.svg" alt="Bootstraplogo" style="width:80px">
-                                    <h3 class="level-title" style="margin-left:1em">Bootstrap</h3>
+                                    <img src="./assets/resume/skills/skillDo.png" alt="DO" style="width:100px;">
+                                    <h3 class="level-title" style="margin-left:1.5em">Digital Ocean</h3>
+                                </div><!--//item-->
+
+                                <div class="col-sm-4 item">
+                                    <img src="./assets/resume/skills/skillReact.png" alt="React" style="width:100px;">
+                                    <h3 class="level-title" style="margin-left:1.5em">React (Basics)</h3>
                                 </div><!--//item-->
 
                                 <div class="col-sm-4 item">
                                     <img src="./assets/resume/skills/ai.png" alt="AIlogo" style="width:80px">
-                                    <h3 class="level-title" style="">Adobe Illustrator</h3>
+                                    <h3 class="level-title">Adobe Illustrator</h3>
                                 </div><!--//item-->
 
                             </div>
